<resources>
    <string name="app_name">Walladog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="gcm_senderId">838012343378</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_success">Identificado correctamente!</string>
    <string name="login_error">Error al autenticar, inténtalo de nuevo.</string>
    <string name="menu_send_message">Enviar Msg</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_login">Identifícate</string>
    <string name="menu_comunicate">Comunícate</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_your_profile">Tu Perfil</string>
    <string name="menu_your_transactions">Tus transacciones</string>
    <string name="menu_your_products">Tus productos</string>
    <string name="menu_add_new">Agregar nuevo</string>
    <string name="menu_gotohome">Ir a Home</string>
    <string name="menu_logout">Desconectar</string>
    <string name="action_ajustes">Ajustes</string>
    <string name="sure_exit">Estás seguro que deseas salir?</string>
    <string name="app_yes">Si</string>
    <string name="app_no">No</string>

</resources>
