<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_gotohome"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_petfeet"
            android:title="@string/menu_your_products"/>
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_your_transactions"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_your_profile"/>
    </group>

    <item android:title="@string/menu_users">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_signin"
                android:title="@string/menu_login"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
